--- a/src/app/pages/configuracion/configuracion.page.html
+++ b/src/app/pages/configuracion/configuracion.page.html
@@ -3,70 +3,55 @@
     <ion-buttons slot="start">
       <ion-back-button default-href="#"></ion-back-button>
     </ion-buttons>
-
     <ion-title class="ion-text-center">Configuración</ion-title>
-
-    <ion-buttons slot="end">
-      <div style="width: 44px;"></div> <!-- Espaciador -->
-    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
+  <div class="contenedor-configuracion">
 
-  <div style="display: flex; align-items: center; margin-bottom: 20px;">
-    <div style="
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      background-color: #3c3838;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-right: 15px;
-    ">
-      <ion-icon name="person-circle" style="font-size: 32px;"></ion-icon>
+    <div class="user-info">
+      <div class="user-icon">
+        <ion-icon name="person-circle"></ion-icon>
+      </div>
+      <div class="user-details">
+        <h2>{{ nombre }}</h2>
+        <p>{{ correo }}</p>
+      </div>
     </div>
-    <div>
-      <h2 style="font-weight: bold; margin: 0;">{{ nombre }}</h2>
-      <p style="color: #666; margin: 0;">{{ correo }}</p>
+
+    <div class="donacion-fondo">
+      <ion-icon name="person-circle" class="donacion-icon"></ion-icon>
+      <div class="donacion-contenido">
+        <h3>Puedes ayudarnos</h3>
+        <ion-button expand="block" class="donacion-button" fill="solid" (click)="irDonaciones()">
+          <ion-label>Donaciones</ion-label>
+        </ion-button>
+      </div>
     </div>
-  </div>
 
-  <ion-list lines="none">
-      <ion-item lines="none">
-    <ion-button color="dark" expand="block" fill="clear" (click)="irDonaciones()">
-      <ion-label class="ion-text-start" style="display: flex; flex-direction: column; align-items: flex-start;">
-        <h3 style="margin: 0;">Donaciones</h3>
-        <p style="margin: 0;">puedes ayudarnos</p>
-      </ion-label>
-    </ion-button>
-  </ion-item>
-  </ion-list>
+    <div class="lista-opciones">
+      <div class="opcion" (click)="irCuenta()">
+        <span>Cuenta</span>
+        <ion-icon name="chevron-forward"></ion-icon>
+      </div>
+      <div class="opcion" (click)="abrirFormulario()">
+        <span>Realizar encuesta más reciente</span>
+        <ion-icon name="chevron-forward"></ion-icon>
+      </div>
+      <div class="opcion" (click)="abrirComentarios()">
+        <span>Enviar comentarios</span>
+        <ion-icon name="chevron-forward"></ion-icon>
+      </div>
+      <div class="opcion" (click)="irARInfopage()">
+        <span>Acerca de</span>
+        <ion-icon name="chevron-forward"></ion-icon>
+      </div>
+    </div>
 
-  <ion-list lines="none" style="margin-top: 30px;">
-    <ion-item>
-        <ion-button fill="clear" color="dark" (click)="irCuenta()">Cuenta</ion-button>
-    </ion-item>
+    <div class="cerrar-sesion" (click)="CerrarSesion()">
+      Cerrar sesión
+    </div>
 
-    <ion-item>
-      <ion-button fill="clear" color="dark" (click)="abrirFormulario()">Realizar encuesta más reciente</ion-button>
-    </ion-item>
-
-    <ion-item>
-      <ion-button fill="clear"color="dark" (click)="abrirComentarios()">Enviar comentarios</ion-button>
-    </ion-item>
-
-    <ion-item>
-      <ion-button fill="clear" color="dark" (click)="irARInfopage()">Acerca de</ion-button>
-    </ion-item>
-
-    <ion-item>
-      <ion-button fill="clear" fill="clear" color="danger" (click)="CerrarSesion()">Cerrar Sesión</ion-button>
-    </ion-item>
-  </ion-list>
-
-  <div style="text-align: center; margin-top: 40px; color: #666; font-size: 12px;">
-    <p>Privacidad | Condiciones de uso | Preguntas más frecuentes</p>
   </div>
 </ion-content>
