--- a/src/app/pages/cuenta/cuenta.page.html
+++ b/src/app/pages/cuenta/cuenta.page.html
@@ -1,52 +1,48 @@
 <ion-header translucent>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button default-href="#"></ion-back-button>
+    </ion-buttons>
     <ion-title>Cuenta</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
   <!-- Perfil del usuario -->
-  <ion-list>
-    <ion-item lines="none">
-      <ion-icon slot="start" name="person-circle"></ion-icon>
-      <ion-label>
+  <div class="perfil-lista">
+    <div class="perfil-item">
+      <ion-icon name="person-circle"></ion-icon>
+      <div class="perfil-label">
         <h3>{{ nombre }}</h3>
         <p>Nombre</p>
-      </ion-label>
-    </ion-item>
+      </div>
+    </div>
 
-    <ion-item lines="none">
-      <ion-icon slot="start" name="mail"></ion-icon>
-      <ion-label>
+    <div class="perfil-item">
+      <ion-icon name="mail"></ion-icon>
+      <div class="perfil-label">
         <h3>{{ correo }}</h3>
         <p>Correo electrónico</p>
-      </ion-label>
-    </ion-item>
-  </ion-list>
+      </div>
+    </div>
+  </div>
 
   <!-- Configuraciones visuales -->
-  <ion-list>
-    <ion-item>
-      <ion-icon slot="start" name="globe"></ion-icon>
-      <ion-label>Idioma</ion-label>
-      <ion-label slot="end">Español</ion-label>
-    </ion-item>
+  <div class="perfil-lista">
+    <div class="perfil-item">
+      <ion-icon name="globe"></ion-icon>
+      <div class="perfil-label">Idioma</div>
+      <div class="perfil-valor">Español</div>
+    </div>
 
-    <ion-item>
-      <ion-icon slot="start" name="moon"></ion-icon>
-      <ion-label>Apariencia</ion-label>
-      <ion-label slot="end" [class.text-light]="temaActual === 'dark'" [class.text-dark]="temaActual === 'light'">
+    <div class="perfil-item">
+      <ion-icon name="moon"></ion-icon>
+      <div class="perfil-label">Apariencia</div>
+      <div class="perfil-valor" [class.text-light]="temaActual === 'dark'" [class.text-dark]="temaActual === 'light'">
         {{ temaActual }}
-      </ion-label>
-    </ion-item>
-
-
-    <ion-item>
-      <ion-icon slot="start" name="cloud-outline"></ion-icon>
-      <ion-label>Cache usada</ion-label>
-      <ion-label slot="end">2.3 MB</ion-label>
-    </ion-item>
-  </ion-list>
+      </div>
+    </div>
+  </div>
 
   <div class="ion-text-center ion-padding-top">
     <small>Versión 1.0.0</small>
