--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,6 +1,3 @@
-<ion-header class="ion-no-border">
-</ion-header>
-
 <ion-content class="ion-padding">
 
   <div class="login-page">
@@ -10,16 +7,18 @@
         <p>Crea una cuenta o inicia sesión para que pueda ayudarte a guardar tus ideas</p>
       </div>
 
-    <ion-item [ngClass]="{'activo': usuario}">
-      <ion-icon name="person" slot="start" [class.oculto]="usuario"></ion-icon>
-      <ion-input #ecoInput [(ngModel)]="usuario" placeholder="Usuario"></ion-input>
-    </ion-item>
+    <ion-card>
+      <ion-item [ngClass]="{'activo': usuario}">
+        <ion-icon name="person" slot="start" [class.oculto]="usuario"></ion-icon>
+        <ion-input #ecoInput [(ngModel)]="usuario" placeholder="Usuario"></ion-input>
+      </ion-item>
 
-    <ion-item [ngClass]="{'activo': password}">
-      <ion-icon name="lock-closed" slot="start" [class.oculto]="password"></ion-icon>
-      <ion-input [(ngModel)]="password" type="password" placeholder="Contraseña"></ion-input>
-    </ion-item>
-
+      <ion-item [ngClass]="{'activo': password}">
+        <ion-icon name="lock-closed" slot="start" [class.oculto]="password"></ion-icon>
+        <ion-input [(ngModel)]="password" type="password" placeholder="Contraseña"></ion-input>
+      </ion-item>
+    </ion-card>
+    
     <ion-button (click)="iniciarSesion()"> 
       <ion-icon name="key" slot="start"></ion-icon>
       Iniciar sesión
@@ -38,5 +37,6 @@
       <div>
         <img src="assets/icon/LogoUCB.png" alt="Logo UCB" class="logo-ucb" *ngIf="!tecladoAbierto">
       </div>
+      
   </div>
 </ion-content>
