--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -32,7 +32,7 @@ ion-content {
   }
 
   ion-card {
-    width: 100%;
+    width: 95%;
     max-width: 400px;
     padding: 1rem;
     background-color: transparent !important;
@@ -95,11 +95,12 @@ ion-content {
   }
 
   ion-button {
-    margin-top: 1rem;
+    margin-top: 1rem;    
     text-transform: none;
-    width: 100%;
+    width: 90%;
     color: var(--text-dark);
     --background: rgba(255, 255, 255, 0.08);
+    --ion-text-color: #d9bfae;
     --border-radius: 5rem;
     --padding-top: 16px;
     --padding-bottom: 16px;
