--- a/src/app/pages/configuracion/configuracion.page.html
+++ b/src/app/pages/configuracion/configuracion.page.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="donacion-fondo">
-      <ion-icon name="person-circle" class="donacion-icon"></ion-icon>
+      <img src="assets/icon/Ecochat2.png" alt="Ecochat Logo" class="donacion-icon" />
       <div class="donacion-contenido">
         <h3>Puedes ayudarnos</h3>
         <ion-button expand="block" class="donacion-button" fill="solid" (click)="irDonaciones()">
@@ -29,6 +29,7 @@
         </ion-button>
       </div>
     </div>
+
 
     <div class="lista-opciones">
       <div class="opcion" (click)="irCuenta()">
