--- a/src/app/pages/configuracion/configuracion.page.scss
+++ b/src/app/pages/configuracion/configuracion.page.scss
@@ -87,7 +87,7 @@ ion-content {
 }
 
 .donacion-fondo {
-  background: url('/assets/icon/wallpaper.png') center/cover no-repeat;
+  background: url('/assets/icon/wallpaper (2).png') center/cover no-repeat;
   padding: 24px;
   border-radius: 20px;
   min-height: 200px;
@@ -100,10 +100,13 @@ ion-content {
 }
 
 .donacion-icon {
-  font-size: 48px;
-  color: white;
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  object-fit: cover;
   margin-bottom: 16px;
 }
+
 
 .donacion-contenido {
   margin-top: 0;
@@ -114,15 +117,15 @@ ion-content {
 
 .donacion-contenido h3 {
   margin: 0 0 16px 0;
-  color: white;
+  color: #124a35;
   font-size: 18px;
   font-weight: 500;
 }
 
 .donacion-button {
-  --background: rgba(255, 255, 255, 0.20);
+  --background: rgba(255, 255, 255, 0.60);
   --border-radius: 32px;
-  --color: white;
+  --color: #124a35;
   width: 100%;
   max-width: 280px;
   height: 45px;
